# flask-api

./: app.py  database.db  pyproject.toml
database/: db.db
src/: __init__.py  app.py  models.py  routes.py  schemas.py
