[tool.poetry]
name = "teste"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
marshmallow = "^3.18.0"
Flask = "^2.2.2"
SQLAlchemy = "^1.4.41"
flask-sqlalchemy = "^3.0.0"
black = "^22.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
